--- a/build.gradle
+++ b/build.gradle
@@ -2,20 +2,20 @@ apply plugin: 'eclipse'
 apply plugin: 'groovy'
 apply plugin: 'maven'
 apply plugin: "com.gradle.plugin-publish"
+apply plugin: "de.timroes.git-version"
 
 buildscript {
-	repositories {
-		maven { url "https://plugins.gradle.org/m2/" }
+	repositories { maven { url "https://plugins.gradle.org/m2/" } }
+	dependencies {
+		classpath "com.gradle.publish:plugin-publish-plugin:0.9.1"
+		classpath "gradle.plugin.de.timroes.gradle:git-version:0.3.0"
 	}
-	dependencies { classpath "com.gradle.publish:plugin-publish-plugin:0.9.1" }
 }
 
 dependencies {
 	compile gradleApi()
 	compile localGroovy()
 }
-
-version='1.2.8'
 
 pluginBundle {
 	website = 'https://github.com/amarcinkowski/gradle-eclipse-php-plugin'
