--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,17 @@
 apply plugin: 'eclipse'
 apply plugin: 'groovy'
 apply plugin: 'maven'
+apply plugin 'com.cinnober.gradle.semver-git'
 apply plugin: "com.gradle.plugin-publish"
-apply plugin: "de.timroes.git-version"
 
 buildscript {
-	repositories { maven { url "https://plugins.gradle.org/m2/" } }
+	repositories {
+		maven { url "https://plugins.gradle.org/m2/" }
+		mavenCentral()
+	}
 	dependencies {
+		classpath "com.cinnober.gradle:semver-git:2.2.0'
 		classpath "com.gradle.publish:plugin-publish-plugin:0.9.1"
-		classpath "gradle.plugin.de.timroes.gradle:git-version:0.3.0"
 	}
 }
 
