--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,14 @@
 apply plugin: 'eclipse'
 apply plugin: 'groovy'
 apply plugin: 'maven'
-apply plugin 'com.cinnober.gradle.semver-git'
+apply plugin: 'com.cinnober.gradle.semver-git'
 apply plugin: "com.gradle.plugin-publish"
 
 buildscript {
 	repositories {
-		maven { url "https://plugins.gradle.org/m2/" }
+		maven {
+			url "https://plugins.gradle.org/m2/"
+		}
 		mavenCentral()
 	}
 	dependencies {
